src/snapshots/dilaria__lex__test__braces_brackets_parens_whitespace.snap
---
source: src/lex.rs
assertion_line: 370
expression: tokens

---
[
    BraceO,
    ParenO,
    BracketO,
    BracketC,
    BracketC,
    BraceC,
]
