src/snapshots/dilaria__lex__test__countdown.snap
---
source: src/lex.rs
assertion_line: 370
expression: tokens

---
[
    Number(
        3.0,
    ),
    Dot,
    Dot,
    Number(
        2.0,
    ),
    Dot,
    Dot,
    Number(
        1.0,
    ),
    Dot,
    Dot,
    Number(
        0.0,
    ),
]
