src/snapshots/dilaria__lex__test__fancy_stuff.snap
---
source: src/lex.rs
expression: tokens
---
[
    Dot,
    Comma,
    Minus,
    Asterisk,
    Minus,
    Comma,
    Dot,
]
