src/snapshots/dilaria__lex__test__greater_than_less_than_equal.snap
---
source: src/lex.rs
expression: tokens
---
[
    GreaterEqual,
    LessEqual,
    EqualEqual,
    Less,
    Less,
    GreaterEqual,
]
