src/snapshots/dilaria__lex__test__greeting.snap
---
source: src/lex.rs
expression: tokens
---
[
    Minus,
    Dot,
    Minus,
    Slash,
    Percent,
]
