src/snapshots/dilaria__lex__test__no_no_no.snap
---
source: src/lex.rs
expression: tokens
---
[
    BangEqual,
    BangEqual,
    Equal,
    BangEqual,
]
