src/snapshots/dilaria__lex__test__serious_program.snap
---
source: src/lex.rs
expression: tokens
---
[
    Let,
    Ident(
        "string",
    ),
    Equal,
    String(
        "hallol",
    ),
    Let,
    Ident(
        "number",
    ),
    Equal,
    Number(
        5.0,
    ),
    Let,
    Ident(
        "me",
    ),
    Ident(
        "out",
    ),
    Dot,
    Ident(
        "_",
    ),
    Dot,
    Fn,
    Ident(
        "world",
    ),
    ParenO,
    ParenC,
    BraceO,
    If,
    Ident(
        "number",
    ),
    EqualEqual,
    Number(
        5.0,
    ),
    Or,
    True,
    EqualEqual,
    False,
    And,
    Not,
    False,
    BraceO,
    Ident(
        "println",
    ),
    ParenO,
    String(
        "Hello \\ World!",
    ),
    ParenC,
    BraceC,
    BraceC,
]
