src/snapshots/dilaria__lex__test__smiley_face.snap
---
source: src/lex.rs
assertion_line: 370
expression: tokens

---
[
    Greater,
    Greater,
    Dot,
    Less,
    Less,
]
